基本实现预订功能